<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/toolbarPrimary"
    android:fitsSystemWindows="true" >
    
    <include layout="@layout/toolbar" />

	<ScrollView
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:background="#FFFFFFFF" >
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
			<TableLayout 
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:layout_margin="10dp">
    
	    		<TableRow android:minHeight="48dp" >
    	    		<TextView
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:labelFor="@+id/editNickname"
        				android:layout_gravity="center_vertical"
        				android:text="@string/nickname" />
    				<EditText
	        			android:id="@+id/editNickname"
    	    			android:inputType="text"
						android:layout_weight="1"
						android:layout_gravity="center_vertical"
						android:layout_width="wrap_content"
        				android:layout_height="wrap_content" />
	    		</TableRow>
    			<TableRow android:minHeight="48dp" >
	    			<TextView
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center_vertical"
	        			android:text="@string/protocol" />

    				<Spinner
	    	    		android:id="@+id/editProtocol"
        				android:inputType="text"
        				android:maxLines="1"
        				android:layout_gravity="center_vertical"
	        			android:layout_width="wrap_content"
    	    			android:layout_height="wrap_content"/>
    			</TableRow>
    			<TableRow android:minHeight="48dp" >
    				<TextView
        				android:layout_width="wrap_content"
	        			android:layout_height="wrap_content"
    	    			android:layout_gravity="center_vertical"
        				android:labelFor="@+id/editHost"
        				android:text="@string/host" />

    				<EditText
        				android:id="@+id/editHost"
	        			android:inputType="text"
						android:layout_weight="1"
						android:layout_gravity="center_vertical"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"/>
	    		</TableRow>
    
    			<TableRow android:minHeight="48dp" >
    				<TextView
	        			android:layout_width="wrap_content"
    	    			android:layout_height="wrap_content"
    	    			android:layout_gravity="center_vertical"
	        			android:labelFor="@+id/editPort"
    	    			android:text="@string/port" />

	    			<EditText
    	    			android:id="@+id/editPort"
        				android:inputType="number"
        				android:maxLines="1"
	        			android:layout_gravity="center_vertical"
    	    			android:layout_width="wrap_content"
        				android:layout_height="wrap_content"/>
    			</TableRow>
    	
		    	<TableRow android:minHeight="48dp" >
    		    	<TextView
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center_vertical"
        				android:labelFor="@+id/editQueue"
	        			android:text="@string/queue" />

		    		<EditText
    		    		android:id="@+id/editQueue"
        				android:inputType="text"
						android:layout_weight="1"
        				android:layout_width="wrap_content"
	        			android:layout_gravity="center_vertical"
    	    			android:layout_height="wrap_content"/>
    			</TableRow>
    
    			<TableRow android:minHeight="48dp" >
        			<TextView
        				android:layout_width="wrap_content"
	        			android:layout_height="wrap_content"
    	    			android:layout_gravity="center_vertical"
        				android:labelFor="@+id/editUserName"
        				android:text="@string/username" />

    				<EditText
        				android:id="@+id/editUserName"
	        			android:inputType="text"
						android:layout_weight="1"
						android:layout_gravity="center_vertical"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"/>
	    		</TableRow>
    
    			<TableRow android:minHeight="48dp" >
        			<TextView
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center_vertical"
	        			android:labelFor="@+id/editPassword"
    	    			android:text="@string/password" />

    				<EditText
        				android:id="@+id/editPassword"
        				android:inputType="textPassword"
        				android:layout_gravity="center_vertical"
						android:layout_weight="1"
    	    			android:layout_width="wrap_content"
        				android:layout_height="wrap_content"/>
    			</TableRow>
    
    			<TableRow android:minHeight="48dp" >
        			<TextView
        				android:layout_width="wrap_content"
	        			android:layout_height="wrap_content"
    	    			android:layout_gravity="center_vertical"
        				android:text="@string/isdefault" />

    				<CheckBox
        				android:id="@+id/editIsDefault"
        				android:layout_gravity="center_vertical"
	        			android:layout_width="wrap_content"
    	    			android:layout_height="wrap_content"/>
    			</TableRow>
			</TableLayout>
			
			<LinearLayout
		    	android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
				<Button
	        		android:id="@+id/editTest"
    	    		android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
    	    		style="?android:attr/buttonBarButtonStyle"
        			android:text="@string/test" />
		    			
		    	<Button
        			android:id="@+id/editSave"
	        		android:layout_width="wrap_content"
    	    		android:layout_height="wrap_content"
        			android:text="@string/save"
        			style="?android:attr/buttonBarButtonStyle"
     				android:enabled="false" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>